# LABS-SISTOP

./: CMakeLists.txt
P1/: CMakeLists.txt  corrupt.c  crc.c  crc.h  main.c  main.h  timer.h
P3/: crc.c  fileManager.c  fileManager.h  main.c  myutils.c  myutils.h
P5/: crc.h  main.c  test.txt  test.txt.crc
